# medicare_api

./: .dockerignore  .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  entrypoint.sh  pyproject.toml
core/: settings.py
core/core/: settings.py
healthcheck/: views.py
medicare_api/: .gitignore  main.py
medicare_api/admin/: views.py
medicare_api/api/: urls.py
medicare_api/api/v1/: urls.py
medicare_api/authentication/: helpers.py  views.py
medicare_api/core/: helpers.py  models.py  serializers.py  settings.py  urls.py  views.py
medicare_api/professional/: managers.py  models.py  serializers.py  urls.py  views.py
medicare_api/professional/migrations/: 0001_initial.py  0002_remove_professional_first_name_and_more.py  0003_profession_description_profession_name.py  0004_rename_profession_professionalspecialization_and_more.py  0005_alter_professionalspecialization_options.py
medicare_api/user/: managers.py  models.py  selectors.py  serializers.py  urls.py  views.py
medicare_api/user/migrations/: 0001_initial.py  0002_alter_user_table.py  0003_alter_user_managers.py  0004_alter_user_managers.py  0005_alter_user_options.py
