[tool.poetry]
name = "medicare-api"
version = "0.1.0"
description = ""
authors = ["bruno <brunoamorim.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "medicare_api"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
djangorestframework = "^3.14.0"
python-decouple = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
